[package]
name = "sentencex"
version = "0.1.0"
edition = "2024"

[lib]
name = "sentencex"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
regex = "1.11.1"
clap = { version = "4.3.2", features = ["derive"] }
serde_yaml = "0.9.33"
once_cell = "1.21.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "segment_benchmark"
harness = false

[workspace]
members = [
    "bindings/python",
    "bindings/wasm",
]
