[package]
name = "sentencex"
version = "0.1.0"
edition = "2024"
description = "Sentence segmentation library with wide language support optimized for speed and utility."
authors = ["Santhosh Thottingal <santhosh.thottingal@gmail.com>"]
keywords = ["nlp", "sentences", "multilingual"]
categories = ["text-processing"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/wikimedia/sentencex"

[lib]
name = "sentencex"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
lazy_static = "1.5.0"
regex = "1.12.2"
clap = { version = "4.3.2", features = ["derive"] }
serde_yaml = "0.9.33"
once_cell = "1.21.3"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }


[[bench]]
name = "segment_benchmark"
harness = false

[workspace]
members = [
    "bindings/python",
    "bindings/nodejs",
    "bindings/wasm",
]
