[package]
name = "sentencex"
version = "0.1.6"
edition = "2024"
description = "Sentence segmentation library with wide language support optimized for speed and utility."
authors = ["Santhosh Thottingal <santhosh.thottingal@gmail.com>"]
keywords = ["nlp", "sentences", "multilingual"]
categories = ["text-processing"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/wikimedia/sentencex"
rust-version = "1.91"

[lib]
name = "sentencex"

[dependencies]
regex = "1.12.2"
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }


[[bench]]
name = "segment_benchmark"
harness = false

[workspace]
members = [
    "bindings/python",
    "bindings/nodejs",
    "bindings/wasm",
]
