[build-system]
requires = ["setuptools", "wheel", "hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentencesegmenter"
description = "Sentence segmenter that supports ~300 languages"
readme = "README.md"
authors = [{name = "Santhosh Thottingal"}]
classifiers = ["Private :: Do Not Upload"]
version = "0.1"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/santhoshtr/sentencesegmenter"
Changelog = "https://github.com/santhoshtr/sentencesegmenter/releases"
Issues = "https://github.com/santhoshtr/sentencesegmenter/issues"
CI = "https://github.com/santhoshtr/sentencesegmenter/actions"

[project.optional-dependencies]
tests = [
    'pytest'
]
dev = [
    "black",
    "ruff",
    "tox",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[project.scripts]
sentencesegmenter = "sentencesegmenter:__main__"