[build-system]
requires = ["setuptools", "wheel", "hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentencex"
description = "Sentence segmenter that supports ~300 languages"
readme = "README.md"
authors = [{name = "Santhosh Thottingal", email = "santhosh.thottingal@gmail.com"}]
license = "MIT"
keywords = [
  "NLP",
  "Natural Language Processing",
  "Tokenizer"
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
version = "0.3.0"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/santhoshtr/sentencex"
Changelog = "https://github.com/santhoshtr/sentencex/releases"
Issues = "https://github.com/santhoshtr/sentencex/issues"
CI = "https://github.com/santhoshtr/sentencex/actions"

[project.optional-dependencies]
tests = [
    "pytest"
]
dev = [
    "black",
    "ruff",
    "tox",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
