[package]
name = "sentencex-dotnet"
version = "0.1.17"
edition = "2024"
description = "Sentence segmentation library with wide language support optimized for speed and utility."
authors = ["Santhosh Thottingal <santhosh.thottingal@gmail.com>"]
keywords = ["nlp", "sentences", "multilingual"]
categories = ["text-processing"]
license = "MIT"
repository = "https://github.com/wikimedia/sentencex"

[lib]
name = "sentencex_dotnet"
crate-type = ["cdylib", "staticlib"]

[dependencies]
sentencex = { path = "../../" }

[build-dependencies]
csbindgen = "1.9.7"
