[package]
name = "sentencex-js"
version = "1.0.9"
edition = "2024"
description = "Sentence segmentation library with wide language support optimized for speed and utility."
authors = ["Santhosh Thottingal <santhosh.thottingal@gmail.com>"]
keywords = ["nlp", "sentences", "multilingual"]
categories = ["text-processing"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/wikimedia/sentencex"
build = "build.rs"
exclude = ["index.node"]

[lib]
name = "sentencex"
crate-type = ["cdylib"]

[dependencies]
sentencex = { path = "../../" }
neon = { version = "1.1.1", features = ["napi-6"], default-features = false }

[build-dependencies]
neon-build = "0.10.1"
