[project]
name = "sentencex"
version = "1.0.0"
requires-python = ">=3.10"
description = "Sentence segmenter that supports ~300 languages"
readme = "README.md"
authors = [{name = "Santhosh Thottingal", email = "santhosh.thottingal@gmail.com"}]
license = "MIT"
keywords = [
  "NLP",
  "Natural Language Processing",
  "Tokenizer"
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
