[package]
name = "sentencex-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
sentencex = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
