[package]
name = "sentencex-wasm"
version = "0.1.9"
edition = "2024"
description = "Sentence segmentation library with wide language support optimized for speed and utility."
authors = ["Santhosh Thottingal <santhosh.thottingal@gmail.com>"]
keywords = ["nlp", "sentences", "multilingual"]
categories = ["text-processing"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/wikimedia/sentencex"

[dependencies]
wasm-bindgen = "0.2"
sentencex = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
